RESOLVED FIXED45745
[Qt] Cookie operations should use NetworkingContext
https://bugs.webkit.org/show_bug.cgi?id=45745
Summary [Qt] Cookie operations should use NetworkingContext
Balazs Kelemen
Reported 2010-09-14 05:03:55 PDT
Like we changed ResourceHandle in http://trac.webkit.org/changeset/67291 to get the QNetworkAccessManager from the NetworkingContext we should change the cookie operations in CookieJarQt.cpp. Currently we are crashing with WebKit2.
Attachments
proposed patch (1.59 KB, patch)
2010-09-14 05:12 PDT, Balazs Kelemen
no flags
proposed patch v2 (1.54 KB, patch)
2010-09-14 05:53 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2010-09-14 05:12:09 PDT
Created attachment 67541 [details] proposed patch
Balazs Kelemen
Comment 2 2010-09-14 05:53:07 PDT
Created attachment 67543 [details] proposed patch v2 Corrected the NetworkingContext usage: use the loader to obtaining it.
Andreas Kling
Comment 3 2010-09-14 05:58:40 PDT
Comment on attachment 67543 [details] proposed patch v2 > + No new functionality so new tests. Missing "no" r=me
Andras Becsi
Comment 4 2010-09-14 06:17:05 PDT
Andras Becsi
Comment 5 2010-09-14 06:18:15 PDT
Comment on attachment 67543 [details] proposed patch v2 Clearing flags.
Note You need to log in before you can comment on or make changes to this bug.