2010-09-14  Balazs Kelemen  <kb@inf.u-szeged.hu>

Reviewed by Andreas Kling.

        [Qt] Cookie operations should use NetworkingContext
        https://bugs.webkit.org/show_bug.cgi?id=45745
        No new functionality so no new tests.

        * platform/qt/CookieJarQt.cpp:
        (WebCore::cookieJar): Use the NetworkingContext for obtaining the QNetworkAccessManager
        instead of directly accessing the FrameLoaderClient.


Canonical link: https://commits.webkit.org/58192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67461 268f45cc-cd09-0410-ab3c-d52691b4dbfc